# vector

./: CMakeLists.txt  Functions.cpp  Functions.h  main.cpp
tests/: CMakeLists.txt  test.cpp  test.sh
tests/files/: doubleWithStr.txt  onlyDouble.txt  veryBigDouble.txt
